objects/DMAPP__Insight_High_Yield_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Node__c</fullName>
        <label>Smart Element</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipLabel>High Yield Questions</relationshipLabel>
        <relationshipName>High_Yield_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Purpose__c</fullName>
        <label>Purpose</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question__c</fullName>
        <inlineHelpText>Enter the High Yield Question, as you would like it asked.</inlineHelpText>
        <label>Question Text</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__What_To_Listen_For__c</fullName>
        <label>What To Listen For</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>High Yield Question</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Purpose__c</columns>
        <columns>DMAPP__Question__c</columns>
        <columns>DMAPP__What_To_Listen_For__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Yield Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>